fixed width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,9 @@ body {
 #clear-button {
     margin-top: 50px;
 }
+
+@media screen and (max-width: 768px) {
+	.wrapper {
+		width: 80%
+	}
+}
